# mod_auth_mysql

./: .gitignore  500mod_auth_mysql.info  DIRECTIVES  INSTALL  Makefile  Makefile.in  USAGE  authnz_mysql.load  config.h  config.h.in  config.status  configure  configure.ac  install-sh  mod_auth_mysql.c  mod_authn_mysql.c  mod_authnz_mysql.c  mod_authnz_mysql.la  mod_authnz_mysql.lo
.libs/: mod_authnz_mysql.la  mod_authnz_mysql.lai
autom4te.cache/: output.0  requests  traces.0  traces.1
debian/: changelog  conffiles  control  copyright  libapache2-mod-auth-mysql.docs  libapache2-mod-auth-mysql.prerm  rules
debian/patches/: 001-usage.dpatch  003-ftbfs_apache2.2.dpatch  004-reconnect.dpatch  005-directives.dpatch  006-options.dpatch  007-unify_namespace.dpatch  008-make_scrambled_password.dpatch  009-port-int.dpatch  00list  010-enctype-apache.dpatch  011-auth_basic.dpatch  012-charset.dpatch  013-CVE-2008-2384_charset.dpatch  014-default-password.dpatch  015-empty-passwords.dpatch  016-apr_pstrcat.dpatch  017-doc_persistent_conn.dpatch
